// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for the off.json config return.rb matches expected output 1`] = `
"# frozen_string_literal: true

# rubocop:disable Lint/UnneededCopDisableDirective
# rubocop:disable Style/GuardClause, Style/RedundantReturn

def foo
  if a
    return
  end
end

def bar
  if a
    return 1
  end
end

def baz
  if a
    return 1
  end
end

def qux
  if a
    return 1, 2
  end
end

def qax
  if a
    return foo :bar
  end
end

# rubocop:enable Style/GuardClause, Style/RedundantReturn
# rubocop:enable Lint/UnneededCopDisableDirective
"
`;

exports[`for the on.json config return.rb matches expected output 1`] = `
"# frozen_string_literal: true

# rubocop:disable Lint/UnneededCopDisableDirective
# rubocop:disable Style/GuardClause, Style/RedundantReturn

def foo
  return if a
end

def bar
  return 1 if a
end

def baz
  return 1 if a
end

def qux
  return 1, 2 if a
end

def qax
  return foo :bar if a
end

# rubocop:enable Style/GuardClause, Style/RedundantReturn
# rubocop:enable Lint/UnneededCopDisableDirective
"
`;
